src/test/deca/context/invalid/DoubleDeclFieldMethod.deca
// Description:
//       Double declaration de Fild method.
//
// Resultats: 
//      Ligne 12: Il existe déjà un champs ou une méthode de même nom 
// 
// Historique:
//      cree le 20/01/2023

class A{
 int x;
 void x(){
 }
}

